- Randomize Crate Contents: No longer randomizes boulder levels.
- Backwards Levels: Wider Camera Field-Of-View enabled by default for backwards levels. (normal FOV for forward levels)

Crash Bandicoot 2: Cortex Strikes Back
- New feature: Randomize Wooden Crates
- New feature: Random Crates Removed
- New feature: Randomize Crate Parameters
- New feature: Random Enemies Removed
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Swizzle Object Palette
- New feature: Greyscale Objects
- New feature: Randomize Pants Color
- Pants color can now be customized in the Mod Menu.
- Randomize Crate Counter: Adjusted minimum counts to prevent impossible scenarios.

Crash Bandicoot: WARPED
- New feature: Randomize Wooden Crates
- New feature: Random Crates Removed
- New feature: Randomize Crate Parameters
- New feature: Random Enemies Removed
- New feature: Remove Warp Room Barriers
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Swizzle Object Palette
- New feature: Greyscale Objects
- New feature: Randomize Pants Color
- Pants color can now be customized in the Mod Menu.
- Randomize Crate Counter: Adjusted minimum counts to prevent impossible scenarios.
- Backwards Levels: Disabled Tell No Tales due to exiting problems.

1.2.1

Crash Twinsanity:
- Fixed processing errors in some versions of the game

1.2.0

General:  
- Added support for Xbox 360 ROMs and directories (can only output to folder).  
- Improved Xbox ROM detection speed.  
- Added a warning if the program fails to verify a Mod Crate.  
- Console/Region specific options will not appear on unsupported versions anymore.  
- The window will now flash when the process is complete.  
- Options now show a description when selected.  