@@ -309,4 +309,16 @@
   <data name="Rand_CrateParamsDesc" xml:space="preserve">
     <value>Random crates can float like in water or space.</value>
   </data>
+  <data name="Mod_InvisibleCrates" xml:space="preserve">
+    <value>All Crates Are Invisible</value>
+  </data>
+  <data name="Mod_InvisibleCratesDesc" xml:space="preserve">
+    <value>All crates are invisible until you touch them.</value>
+  </data>
+  <data name="Rand_InvisibleCrates" xml:space="preserve">
+    <value>Random Crates Are Invisible</value>
+  </data>
+  <data name="Rand_InvisibleCratesDesc" xml:space="preserve">
+    <value>Random crates are invisible until you touch them.</value>
+  </data>
 </root>
