@@ -254,22 +254,34 @@ namespace CrateModLoader.GameSpecific.Crash3
 
         }
 
-        public enum CrateParamFlags
+        public enum CrateParamFlagsA
         {
-            Unk1 = 0,
-            Unk2 = 1,
-            Unk3 = 2,
-            WaterFloat = 3,
-            Outlined = 4,
-            Unk4 = 5,
-            NonSolid = 6, //can walk into to activate/destroy, can bounce off of it
-            Unk5 = 7,
-            IceReflection = 8,
-            SpaceFloat = 9, // doesn't work in this game, just randomly despawns the box
-            Unk6 = 10,
-            Unk7 = 11,
-            Unk8 = 12,
-            Unk9 = 13,
+            Invisible = 0,
+            GhostVisible = 1,
+            AutoCollect = 2,
+            LowZ1 = 3,
+            LowZ2 = 4,
+            NoGhost = 5,
+            GhostBreak = 6,
+            NoAbove = 7,
+        };
+
+        public enum CrateParamFlagsB
+        {
+            NoTrigger = 0,
+            BonusContinue = 1,
+            LowZ3 = 2,
+            Wave = 3,
+            Ghost = 4,
+            NoBottom = 5,
+            NoSides = 6,  //can walk into to activate/destroy, can bounce off of it, jetski can't break it though
+            NoTop = 7,
+            Reflection = 8,
+            Space = 9,
+            NitroNoHop = 10,
+            NoBelow = 11,
+            NitroSolid = 12,
+            NoHit = 13,
             Unk10 = 14,
             Unk11 = 15,
             Unk12 = 16,
@@ -297,27 +309,27 @@ namespace CrateModLoader.GameSpecific.Crash3
                                 {
                                     if (ent.Settings.Count > 1 && ent.Subtype != (int)CrateSubTypes.Slot && ent.Subtype != (int)CrateSubTypes.Clock)
                                     {
-                                        int oldSet = ent.Settings[1].ValueB;
+                                        byte SetA = ent.Settings[1].ValueA;
+                                        int SetB = ent.Settings[1].ValueB;
 
-                                        int cratePreset = rand.Next(6);
-                                        
+                                        int cratePreset = rand.Next(8);
+
                                         switch (cratePreset)
                                         {
                                             default:
                                                 break;
                                             case 0:
-                                                oldSet |= 1 << (int)CrateParamFlags.WaterFloat;
+                                                SetB |= 1 << (int)CrateParamFlagsB.Wave;
                                                 break;
                                             case 1:
-                                                oldSet |= 1 << (int)CrateParamFlags.NonSolid;
+                                                SetB |= 1 << (int)CrateParamFlagsB.Space;
                                                 break;
                                             case 2:
-                                                oldSet |= 1 << (int)CrateParamFlags.WaterFloat;
-                                                oldSet |= 1 << (int)CrateParamFlags.NonSolid;
+                                                SetB |= 1 << (int)CrateParamFlagsB.NitroNoHop;
                                                 break;
                                         }
 
-                                        ent.Settings[1] = new EntitySetting(0, oldSet);
+                                        ent.Settings[1] = new EntitySetting(SetA, SetB);
                                     }
                                 }
                             }
@@ -326,6 +338,41 @@ namespace CrateModLoader.GameSpecific.Crash3
                 }
             }
 
+        }
+
+        public static void Mod_InvisibleCrates(NSF nsf, Random rand, Crash3_Levels level, bool isRandom)
+        {
+            // edit NSF
+            foreach (Chunk chunk in nsf.Chunks)
+            {
+                if (chunk is NormalChunk zonechunk)
+                {
+                    foreach (Entry entry in zonechunk.Entries)
+                    {
+                        if (entry is NewZoneEntry zone)
+                        {
+                            foreach (Entity ent in zone.Entities)
+                            {
+                                if (ent.Type != null && ent.Type == 34)
+                                {
+                                    if (ent.Settings.Count > 1)
+                                    {
+                                        if (!isRandom || (isRandom && rand.Next(2) == 0))
+                                        {
+                                            byte SetA = ent.Settings[1].ValueA;
+                                            int SetB = ent.Settings[1].ValueB;
+
+                                            SetA |= 1 << (int)CrateParamFlagsA.Invisible;
+
+                                            ent.Settings[1] = new EntitySetting(SetA, SetB);
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
 
         public static void Mod_TurnCratesIntoWumpa(NSF nsf, Random rand)
